--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.3.*",
+        "phpunit/phpunit": "^6.1",
         "symfony/stopwatch": "~2.5",
         "nyholm/nsa": "^1.1"
     },
